--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -12,12 +12,13 @@
     "@nuxtjs/axios": "^5.13.6",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^3.8.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.1.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
-  },
-  "devDependencies": {}
+  }
 }
