--- a/old/package.json
+++ b/old/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "dev": "concurrently \"npm run start\" \"cd client && npm run start\"",
+    "dev": "concurrently \\\"npm run start\\\" \\\"cd client && npm run start\\\"",
     "build": "cd client && npm run build"
   },
   "keywords": [],
