--- a/pvtools/.gitignore
+++ b/pvtools/.gitignore
@@ -22,6 +22,9 @@ coverage
 # .env files containing sensitive data
 .env
 
+# .editorconfig not required as package
+.editorconfig
+
 # nyc test coverage
 .nyc_output
 
