--- a/pvtools/Dockerfile
+++ b/pvtools/Dockerfile
@@ -1,7 +1,7 @@
 # LTS
-FROM node:16-alpine3.15  
+FROM node:16-alpine as build
+ENV NODE_ENV=production
 
-RUN mkdir -p /pvtools
 WORKDIR /pvtools
 
 COPY ["package.json", "package-lock.json*", "./"]
@@ -9,7 +9,10 @@ COPY ["package.json", "package-lock.json*", "./"]
 RUN npm install
 COPY . .
 # RUN export NODE_OPTIONS=--openssl-legacy-provider
-RUN npm run build
 RUN npm run generate
 
-# docker build ./pvtools -t pvtfront:0.99 
+CMD ["npm", "start"]
+
+FROM nginx:1.22-alpine
+
+COPY --from=build /pvtools/dist /usr/share/nginx/html
