--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^3.8.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
+    "papaparse": "^5.4.1",
     "vue": "^2.6.14",
     "vue-chartjs": "^4.1.1",
     "vue-server-renderer": "^2.6.14",
