extend faq and news

--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -23,6 +23,7 @@
     "papaparse": "^5.4.1",
     "vue": "^2.6.14",
     "vue-chartjs": "^4.1.1",
+    "vue-gtag": "^1.16.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
