--- a/backend/package.json
+++ b/backend/package.json
@@ -11,22 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
-    "body-parser": "^1.19.0",
-    "bson": "^4.5.3",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "handlebars": "^4.7.7",
-    "moment": "^2.29.1",
-    "mongodb": "^4.1.3",
-    "nodemailer": "^6.7.0",
-    "nodemailer-express-handlebars": "^4.0.0",
-    "nodemon": "^2.0.13",
-    "typescript": "^4.4.4"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.2",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.36",
-    "@types/nodemailer": "^6.4.1"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.4"
   }
 }
