--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "csv-parse": "^5.5.2",
-    "jest": "^28.1.3"
+    "jest": "^28.1.3",
+    "prettier": "^3.1.1"
   }
 }
