Revert "Improve backend Docker build"
This reverts commit b68d5e4275cf7220ede692303f0225fb2f3d0c44.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,6 @@
-ARG NODE_BASEIMAGE=node:21.4.0-alpine3.19
-
-FROM ${NODE_BASEIMAGE} AS builder
+FROM node:21.4.0-alpine3.19
 WORKDIR /app
+COPY package*.json ./
+RUN npm install
 COPY . .
-RUN npm ci --omit=dev && \
-    npm run compile-ts
-
-FROM ${NODE_BASEIMAGE}
-RUN apk add --no-cache tini
-WORKDIR /app
-COPY --from=builder /app/node_modules /app/node_modules
-COPY --from=builder /app/dist /app/dist
-USER node
-CMD [ "tini", "node", "--", "dist/index.js" ]
+CMD ["npm", "run",  "start-server"]
