--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -7,7 +7,8 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "test-all": "jest --all"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
