--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -1,36 +1,24 @@
 {
-  "name": "pvtools",
-  "version": "1.0.0",
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
+    "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "test": "jest --watch"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/vue-fontawesome": "^2.0.10",
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/google-analytics": "^2.4.0",
-    "bootstrap": "^4.6.2",
-    "bootstrap-vue": "^2.21.2",
-    "chart.js": "^3.9.1",
-    "core-js": "^3.34.0",
-    "nuxt": "^2.17.2",
-    "papaparse": "^5.4.1",
-    "vue": "^2.7.15",
-    "vue-chartjs": "^4.1.2",
-    "vue-gtag": "^1.16.1",
-    "vue-server-renderer": "^2.7.15",
-    "vue-template-compiler": "^2.7.15",
-    "webpack": "^4.47.0"
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "csv-parse": "^5.5.2",
-    "jest": "^28.1.3",
-    "prettier": "^3.1.1"
+    "@nuxt/devtools": "latest",
+    "nuxt": "^3.8.2",
+    "vue": "^3.3.12",
+    "vue-router": "^4.2.5",
+    "vuetify-nuxt-module": "^0.7.3"
+  },
+  "dependencies": {
+    "chart.js": "^4.4.1",
+    "papaparse": "^5.4.1",
+    "vue-chartjs": "^5.3.0"
   }
 }
