ssr -> spa und cdn replaced

--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -10,12 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@mdi/font": "^7.3.67",
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.2",
     "vue": "^3.3.12",
     "vue-router": "^4.2.5",
     "vuetify-nuxt-module": "^0.7.3"
-
   },
   "dependencies": {
     "chart.js": "^4.4.1",
