--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -10,16 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@mdi/font": "^7.3.67",
     "@nuxt/devtools": "latest",
     "nuxt": "^3.8.2",
+    "nuxt-quasar-ui": "^2.0.7",
     "vue": "^3.3.12",
-    "vue-router": "^4.2.5",
-    "vuetify-nuxt-module": "^0.7.3"
+    "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.9",
     "chart.js": "^4.4.1",
     "papaparse": "^5.4.1",
+    "quasar": "^2.14.2",
     "vue-chartjs": "^5.3.0"
   }
 }
