--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -11,8 +11,12 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxt/test-utils": "^3.9.0",
+    "@vue/test-utils": "^2.4.3",
+    "happy-dom": "^12.10.3",
     "nuxt": "^3.8.2",
     "nuxt-quasar-ui": "^2.0.7",
+    "vitest": "^1.1.0",
     "vue": "^3.3.12",
     "vue-router": "^4.2.5"
   },
