--- a/pvtools/package.json
+++ b/pvtools/package.json
@@ -16,6 +16,7 @@
     "@vue/test-utils": "^2.4.3",
     "happy-dom": "^12.10.3",
     "nuxt": "^3.8.2",
+    "nuxt-gtag": "^1.1.2",
     "nuxt-quasar-ui": "^2.0.7",
     "vitest": "^1.1.0",
     "vue": "^3.3.12",
